<resources>
    <string name="app_name">N Music</string>
    <string name="nav_library">Library</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_sources">Sources</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="navigation">Navigation</string>
    <string name="open_navigation">Open navigation</string>
    <string name="collapse_navigation">Collapse navigation</string>
    <string name="close_navigation">Close navigation</string>
    <string name="dismiss_sheet">Close sheet</string>
    <string name="close">Close</string>
    <string name="search_library">Search your library</string>
    <string name="tab_tracks">Tracks</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_genres">Genres</string>
    <string name="list_view">List view. Switch to grid</string>
    <string name="grid_view">Grid view. Switch to list</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="play_all">Play all %1$s tracks</string>
    <string name="shuffle_all">Shuffle all %1$s tracks</string>
    <string name="more_for">More for %1$s</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="no_album">Tracks without an album</string>
    <string name="no_artist">Tracks without an artist</string>
    <string name="no_genre">Tracks without a genre</string>
    <string name="playing">Playing</string>
    <string name="sort_artist_album">Artist, then album</string>
    <string name="sort_title">Title</string>
    <string name="sort_album">Album</string>
    <string name="sort_year">Year</string>
    <string name="sort_most_played">Most played</string>
    <string name="sort_recently_played">Recently played</string>
    <string name="sort_length">Length</string>
    <string name="sort_location">File location</string>
    <string name="sort_recently_added">Recently added</string>
    <string name="sort_album_artist">Album artist</string>
    <string name="sort_name">Name</string>
    <string name="sort_newest">Newest</string>
    <string name="sort_oldest">Oldest</string>
    <string name="sort_most_tracks">Most tracks</string>
    <string name="sort_a_to_z">A to Z</string>
    <string name="sort_z_to_a">Z to A</string>
    <string name="sort_oldest_first">Oldest first</string>
    <string name="sort_newest_first">Newest first</string>
    <string name="sort_most_first">Most first</string>
    <string name="sort_fewest_first">Fewest first</string>
    <string name="sort_latest_first">Latest first</string>
    <string name="sort_earliest_first">Earliest first</string>
    <string name="sort_tracks">Sort tracks</string>
    <string name="sort_albums">Sort albums</string>
    <string name="sort_artists">Sort artists</string>
    <string name="sort_genres">Sort genres</string>
    <string name="reverse_order">Reverse the order</string>
    <string name="sort_shortest_first">Shortest first</string>
    <string name="sort_longest_first">Longest first</string>
    <string name="column_number">#</string>
    <string name="column_title">Title</string>
    <string name="column_album">Album</string>
    <string name="column_year">Year</string>
    <string name="column_plays">Plays</string>
    <string name="column_time">Time</string>
    <string name="filters">Filters</string>
    <plurals name="filters_active">
        <item quantity="one">Filters, %1$d active</item>
        <item quantity="other">Filters, %1$d active</item>
    </plurals>
    <string name="clear_all">Clear all</string>
    <string name="filters_hint">A track has to match every section you set. Where you can pick several, any of them counts.</string>
    <string name="filter_genre">Genre</string>
    <string name="filter_year">Year</string>
    <string name="filter_plays">Plays</string>
    <string name="filter_last_played">Last played</string>
    <string name="filter_format">Format</string>
    <string name="filter_source">Source</string>
    <string name="filter_artist">Artist</string>
    <string name="filter_album">Album</string>
    <string name="filter_genre_named">genre</string>
    <string name="filter_year_named">year</string>
    <string name="filter_plays_named">plays</string>
    <string name="filter_last_played_named">last played</string>
    <string name="filter_format_named">format</string>
    <string name="filter_source_named">source</string>
    <string name="filter_artist_named">artist</string>
    <string name="filter_album_named">album</string>
    <string name="change_filter">Change the %1$s filter</string>
    <string name="clear_filter">Clear the %1$s filter</string>
    <string name="see_all">See all %1$s</string>
    <string name="any_year">Any year</string>
    <string name="years_range">%1$d–%2$d</string>
    <string name="years_from">From %1$d</string>
    <string name="years_to">Until %1$d</string>
    <string name="pick_one">pick one</string>
    <string name="plays_never">Never played</string>
    <string name="plays_at_least">%1$d+</string>
    <plurals name="plays_at_least_chip">
        <item quantity="one">%1$d+ plays</item>
        <item quantity="other">%1$d+ plays</item>
    </plurals>
    <string name="played_past_week">Past week</string>
    <string name="played_past_month">Past month</string>
    <string name="played_past_year">Past year</string>
    <string name="played_not_in_month">Not in a month</string>
    <string name="played_not_in_year">Not in a year</string>
    <string name="played_past_week_chip">Played past week</string>
    <string name="played_past_month_chip">Played past month</string>
    <string name="played_past_year_chip">Played past year</string>
    <string name="played_not_in_month_chip">Not played in a month</string>
    <string name="played_not_in_year_chip">Not played in a year</string>
    <string name="any_artist">Any artist</string>
    <string name="any_album">Any album</string>
    <string name="no_genre_short">No genre</string>
    <string name="no_album_short">No album</string>
    <string name="more_values">%1$s +%2$d</string>
    <string name="search_genres">Search genres</string>
    <string name="search_artists">Search artists</string>
    <string name="search_albums">Search albums</string>
    <string name="clear_search">Clear search</string>
    <string name="show_tracks_counting">Show tracks</string>
    <plurals name="show_tracks">
        <item quantity="one">Show %1$s track</item>
        <item quantity="other">Show %1$s tracks</item>
    </plurals>
    <string name="play_count">Play %1$s</string>
    <string name="play_matching">Play the %1$s matching tracks</string>
    <string name="shuffle_matching">Shuffle the %1$s matching tracks</string>
    <string name="album_kind">Album</string>
    <string name="artist_kind">Artist</string>
    <string name="disc">Disc %1$d</string>
    <string name="disc_unknown">Other tracks</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="track_plays_next">%1$s plays next</string>
    <string name="track_queued">Added %1$s to the queue</string>
    <string name="played_times">Played %1$d× · %2$s</string>
    <string name="search_all">All</string>
    <string name="close_search">Close search</string>
    <string name="search_nothing">Nothing matches your search</string>
    <string name="search_nothing_hint">Search looks at titles, artists, albums and genres. Try fewer words.</string>
    <string name="library_empty">Your library is empty</string>
    <string name="library_empty_hint">Add a folder with music or a web playlist in Sources, and its tracks show up here.</string>
    <string name="open_sources">Open Sources</string>
    <string name="filters_nothing">No tracks match these filters</string>
    <string name="filters_nothing_hint">No track matches every filter at once. Remove one to see more.</string>
    <string name="clear_filters">Clear filters</string>
    <string name="stop_selecting">Stop selecting</string>
    <string name="select_all">Select all %1$s tracks</string>
    <plurals name="selected_count">
        <item quantity="one">%1$s selected</item>
        <item quantity="other">%1$s selected</item>
    </plurals>
    <plurals name="act_on">
        <item quantity="one">Act on %1$s track</item>
        <item quantity="other">Act on %1$s tracks</item>
    </plurals>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <plurals name="queued_next">
        <item quantity="one">%1$s track plays next</item>
        <item quantity="other">%1$s tracks play next</item>
    </plurals>
    <plurals name="queued">
        <item quantity="one">Added %1$s track to the queue</item>
        <item quantity="other">Added %1$s tracks to the queue</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="new_playlist_item">New playlist…</string>
    <string name="add_to_playlist_hint">Untick one to take the track out. Smart playlists aren’t listed because they fill themselves from their rules.</string>
    <string name="playlist_has_track">has this track</string>
    <string name="playlist_has_all">has all of them</string>
    <string name="playlist_has_some">has %1$s of them</string>
    <plurals name="added_to_playlist">
        <item quantity="one">Added %1$s track to %2$s</item>
        <item quantity="other">Added %1$s tracks to %2$s</item>
    </plurals>
    <plurals name="removed_from_playlist">
        <item quantity="one">Removed %1$s track from %2$s</item>
        <item quantity="other">Removed %1$s tracks from %2$s</item>
    </plurals>
    <string name="dismiss_dialog">Close dialog</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="new_playlist">New playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="building_library">Building your library</string>
    <string name="building_library_hint">Every track found is listed already and can play now. Titles and covers fill in as they’re read.</string>
    <string name="read_of_found">%1$s of %2$s read</string>
    <string name="read_slash_found">%1$s / %2$s</string>
    <plurals name="tracks_count">
        <item quantity="one">%1$s track</item>
        <item quantity="other">%1$s tracks</item>
    </plurals>
    <plurals name="albums_count">
        <item quantity="one">%1$s album</item>
        <item quantity="other">%1$s albums</item>
    </plurals>
    <plurals name="artists_count">
        <item quantity="one">%1$s artist</item>
        <item quantity="other">%1$s artists</item>
    </plurals>
    <plurals name="genres_count">
        <item quantity="one">%1$s genre</item>
        <item quantity="other">%1$s genres</item>
    </plurals>
    <string name="duration_minutes">%1$d min</string>
    <string name="duration_hours">%1$d h %2$d min</string>
    <string name="duration_hours_only">%1$d h</string>
    <plurals name="duration_days">
        <item quantity="one">%1$d day %2$d h</item>
        <item quantity="other">%1$d days %2$d h</item>
    </plurals>
    <plurals name="plays_count">
        <item quantity="one">%1$s play</item>
        <item quantity="other">%1$s plays</item>
    </plurals>
    <string name="when_today">today</string>
    <string name="when_yesterday">yesterday</string>
    <plurals name="when_days_ago">
        <item quantity="one">%1$d day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>
    <string name="when_last_week">last week</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="widget_nothing_playing">Nothing playing</string>
</resources>